family display and xlsx export

--- a/pom.xml
+++ b/pom.xml
@@ -127,11 +127,11 @@
 		<version>1.5.2</version>
 	</dependency>
 	
-	<dependency>
-		<groupId>io.netty</groupId>
-		<artifactId>netty-all</artifactId>
-		<version>4.0.17.Final</version>
-	</dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>io.netty</groupId> -->
+<!-- 		<artifactId>netty-all</artifactId> -->
+<!-- 		<version>4.0.17.Final</version> -->
+<!-- 	</dependency> -->
     
 <!--     <dependency> -->
 <!--     	<groupId>net.sf.json-lib</groupId> -->
@@ -146,7 +146,6 @@
     	<version>1.6.1</version>
     </dependency>
 
-<!--     
     <dependency>
     	<groupId>org.apache.poi</groupId>
     	<artifactId>poi</artifactId>
@@ -158,12 +157,11 @@
 	    <version>3.9</version>
 	</dependency>
 	
-	<dependency>
-	    <groupId>org.apache.httpcomponents</groupId>
-	    <artifactId>httpclient</artifactId>
-	    <version>4.2.4</version>
-	</dependency>
- -->
+<!-- 	<dependency> -->
+<!-- 	    <groupId>org.apache.httpcomponents</groupId> -->
+<!-- 	    <artifactId>httpclient</artifactId> -->
+<!-- 	    <version>4.2.4</version> -->
+<!-- 	</dependency> -->
  
 	<dependency>
 	    <groupId>com.alibaba</groupId>
